<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:weightSum="7"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.vanessa.temp.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@drawable/wallpaper1">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight='3'
        android:weightSum="3">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/profileimage"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2"
             />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:ellipsize="none"
            android:textSize="30sp"
            android:id="@+id/orgname"
            android:singleLine="true"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"/>
         </LinearLayout>




    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="6">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/addressimage"
            android:layout_weight="1"
            android:padding="15dp"
            android:background="@android:drawable/ic_dialog_map" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/ad"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:id="@+id/address"
            android:layout_weight="2"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:id="@+id/orgaddress"
            android:layout_weight="3"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="6"
        android:layout_weight="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/phoneimage"
            android:padding="15dp"
            android:layout_weight="1"
            android:background="@android:drawable/stat_sys_phone_call" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/co"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:id="@+id/phone"
            android:layout_weight="2"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/orgphone"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_weight="3"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="6"

        android:layout_weight="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:id="@+id/emailimage"
            android:layout_weight="1"
            android:background="@android:drawable/ic_dialog_email" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/em"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:id="@+id/email"
            android:layout_weight="2"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/orgemail"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_weight="3"/>
    </LinearLayout>

    </LinearLayout>


